--- a/src/app/components/title-bar/title-bar.component.html
+++ b/src/app/components/title-bar/title-bar.component.html
@@ -1,6 +1,6 @@
 <header>
     <p>H<span style="font-size: 48px;">ELENA</span> L<span style="font-size: 48px;">YND</span></p>
-    <button class="button" routerLink="/contact" routerLinkActive="active" aria-current="page">Contact</button>
-    <button class="button" routerLink="/projects" routerLinkActive="active" aria-current="page">Projects</button>
-    <button class="button" routerLink="/" routerLinkActive="active" aria-current="page">Resume</button>
+    <button class="button" routerLink="/contact" routerLinkActive="active" aria-current="page"><span class="material-symbols-outlined">call</span> Contact</button>
+    <button class="button" routerLink="/projects" routerLinkActive="active" aria-current="page"><span class="material-symbols-outlined">folder_open</span> Projects</button>
+    <button class="button" routerLink="/" routerLinkActive="active" aria-current="page"><span class="material-symbols-outlined">clinical_notes</span> Resume</button>
 </header>
