--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -1,1 +1,41 @@
-<p>Resume works!</p>
+<div class="sidebar-container">
+    <div class="left-sidebar"></div>
+    <div class="content">
+        <button class="header-info">
+            <p>
+                <span class="material-symbols-outlined">home</span> Pittsford, NY 
+                <span class="material-symbols-outlined">call</span> Available Upon Request 
+                <span class="material-symbols-outlined">mail</span> hml9034&#64;rit.edu 
+                <span class="material-symbols-outlined">public</span> Helena-Lynd 
+            </p>
+        </button>   
+        <div class="heading-with-line">
+            <span class="header-text">OBJECTIVE</span>
+            <hr>
+        </div>   
+        <p class="resume-text">Passionate student seeking a software engineering co-op/internship for January - August 2025.</p>
+
+        <div class="heading-with-line">
+            <span class="header-text">EDUCATION</span>
+            <hr>
+        </div>  
+        <p class="resume-text">
+            <b>Rochester Institute of Technology</b><br>
+            <i>Bachelor of Science in Software Engineering, Expected Graduation Date: May 2026</i><br>
+        </p>
+        <ul>
+            <li> GPA: 3.81</li>
+            <li> Minors: Computer Engineering, Computing Security</li>
+            <li>Honors: Dean’s List (Spring 2021 - Present), Presidential Scholarship</li>
+        </ul>
+        <p class="resume-text"><b>Google UX/UI Design Certificate,</b>Received June 2024</p>
+
+        <div class="heading-with-line">
+            <span class="header-text">WORK EXPERIENCE</span>
+            <hr>
+        </div>
+
+
+    </div>
+    <div class="right-sidebar"></div>
+</div>
