--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -1,7 +1,11 @@
+<!-- Sidebar container: Flex container for Left Sidebar, Middle Resume, Right Sidebar -->
 <div class="sidebar-container">
+    <!-- Left Sidebar -->
     <div class="sidebar"></div>
 
+    <!-- Middle Resume Section-->
     <div class="content">
+        <!-- Blue box at the top of my resume displaying contact information -->
         <div class="quick-facts-box">
             <div class="quick-fact">
                 <p><span class="material-symbols-outlined">home</span> Pittsford, NY </p>
@@ -20,6 +24,7 @@
             </div>
         </div>
 
+        <!-- Objective Section -->
         <div class="heading-container">
             <span class="heading-text">OBJECTIVE</span><hr>
         </div>   
@@ -27,6 +32,7 @@
             Passionate student seeking a software engineering co-op/internship for January - August 2025.
         </p>
 
+        <!-- Education Section -->
         <div class="heading-container">
             <span class="heading-text">EDUCATION</span><hr>
         </div>  
@@ -41,10 +47,85 @@
         </ul>
         <p class="resume-text"><b>Google UX/UI Design Certificate, </b>Received June 2024</p>
 
+        <!-- Work Experience Section -->
         <div class="heading-container">
             <span class="heading-text">WORK EXPERIENCE</span><hr>
         </div>
+
+        <p class="resume-text">
+            <b>Lockheed Martin Space,</b> Software Engineering Intern (May 2024 - August 2024)<br>
+        </p>
+        <ul>
+            <li>Worked with an Agile team and participated in daily scrum, sprint planning, and sprint demo</li>
+            <li>Collaborated on the design and development of an Angular front-end, complete with unit testing</li>
+            <li>Developed services and API's to connect the front-end to back-end data</li>
+        </ul>
+        
+        <p class="resume-text">
+            <b>RIT Simone Center for Innovation,</b> Office Support (June 2022 - December 2023)
+        </p>
+        <ul>
+            <li>Assisted with organizing events, managing student outreach programs, and creating graphics</li>
+        </ul>
+
+        <p class="resume-text">
+            <b>EEP Quality Group,</b> Team Member (June 2021 - August 2021)
+        </p>
+        <ul>
+            <li>Worked in assembly and quality control, creating and inspecting fuel cells for Plug Power</li>
+        </ul>
+
+        <!-- Skills Section -->
+        <div class="heading-container">
+            <span class="heading-text">SKILLS</span><hr>
+        </div>
+
+        <p class="resume-text">
+            <b>Programming Languages:</b> Python, Java, C++, C#, JavaScript, HTML, CSS, SQL, Assembly, VHDL<br>
+            <b>Platforms and Frameworks:</b> Angular, React, Git, GitHub<br>
+            <b>Tools:</b> Figma, AdobeXD, Jira, Trello, Microsoft Office<br>
+        </p>
+
+        <!-- Projects Section -->
+        <div class="heading-container">
+            <span class="heading-text">PROJECTS</span><hr>
+        </div>
+
+        <p class="resume-text">
+            <b>E-Store Website (Java and Angular)</b>
+        </p>
+        <ul>
+            <li>Collaborated with a small team to develop a bakery e-store using a Java API and Angular</li>
+            <li>Used four sprint iterations following Agile methodology</li>
+            <li>Emphasized thorough documentation and unit testing</li>
+            <li>Deployed to a production environment with scalability considerations</li>
+        </ul>
+
+        <p class="resume-text">
+            <b>Designing a MIPS Processor (VHDL)</b>
+        </p>
+        <ul>
+            <li>Independently designed each of the central components of a MIPS processor using VHDL</li>
+            <li>Utilized testbenches for each component to ensure correct functionality</li>
+            <li>Conducted peer review after designing each component to consider improvements</li>
+        </ul>
+
+        <!-- Extracurriculars Section -->
+        <div class="heading-container">
+            <span class="heading-text">EXTRACURRICULARS</span><hr>
+        </div> 
+    
+        <p class="resume-text">
+            <b>Women in Engineering,</b> Member (September 2022 - Present)
+        </p>
+        <ul>
+            <li>Regularly attended monthly workshops focused on diverse professional topics, such as communication, teamwork, and leadership development</li>
+        </ul>
     </div>
 
+    <!-- Right Sidebar -->
     <div class="sidebar"></div>
 </div>
+
+<!-- Gray footer -->
+<div class="gray-footer"></div>
